# ai-text-structor

./: .envrc  .gitignore  Dockerfile  LICENSE  README.md  devbox.json  engine.json  example_1.json  example_2.json  example_3.json  example_4.json  example_5.json  example_6.json  example_model.json  local_engine.json  new_input.json  new_input_data_only.json  output.json  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
ai_engine/: __init__.py  ai_engine.py  data_executor.py  process_list.py  process_numeric.py  process_object.py  process_string.py  process_workflow.py  workflow_executor.py
ai_text_structor/: __init__.py  ai_text_structor.py  data_executor.py  process_list.py  workflow_executor.py
docs/: concept.md  implementation_details.md  json.md
src/: ai_engine.py  build_model.py  completion.py  data_executor.py  engine_config.py  key_helper.py  main.py  models.py  process_intent.py  process_list.py  process_numeric.py  process_object.py  process_string.py  process_workflow.py  prompt_engine.py  test_main.py  test_standup.py  workflow_executor.py
terraform/: backend.tf  cloud_function.tf  cloud_function_consumer.tf  code_storage.tf  main.tf  pub_sub.tf  summary_bucket.tf  variables.tf
tests/: helper.py  test_interview.py  test_planning.py  test_project_closure.py  test_standup.py
