[tool.poetry]
name = "ai-engine"
version = "0.1.0"
description = "AI processing workflow and data operations manager"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "ai_engine"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langchain = "^0.3.7"
langchain-core = "^0.3.19"
numpy = ">=1.26.0"
pydantic = "^2.0.0"
pydantic-core = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.8.0"
bandit = "^1.7.0"
sphinx = "^7.0.0"
pdoc3 = "^0.10.0"
langchain-openai = "^0.2.9"
langchain-google-genai = "^2.0.4"
langchain-mistralai = "^0.2.1"
aiohttp = "^3.9.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
responses = "^0.24.1"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=45.0.0", "wheel"]
build-backend = "poetry.core.masonry.api" 